# ignis

./: .gitignore  flake.nix  meson.build  meson_options.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: 4-nix.yaml
docs/api/: command_manager.rst  config_manager.rst  css_manager.rst  icon_manager.rst  index.rst  toplevel.rst
docs/api/services/: niri.rst  power_profiles.rst
docs/api/utils/: misc.rst
docs/api/widgets/: Corner.rst  Fixed.rst
docs/dev/: env.rst
docs/user/: cli.rst  faq.rst  installation.rst  nix.rst  styling.rst
ignis/: __init__.py  _ignis_ipc.py  app.py  base_widget.py  cli.py  client.py  command_manager.py  config_manager.py  css_manager.py  exceptions.py  icon_manager.py  menu_model.py  options.py
ignis/dbus/: com.github.linkfrg.ignis.xml  org.freedesktop.UPower.PowerProfiles.xml
ignis/services/applications/: action.py  application.py  service.py
ignis/services/audio/: service.py
ignis/services/fetch/: service.py
ignis/services/hyprland/: service.py
ignis/services/niri/: __init__.py  service.py  window.py  window_layout.py
ignis/services/power_profiles/: __init__.py  constants.py  service.py
ignis/services/upower/: service.py
ignis/services/wallpaper/: service.py  window.py
ignis/utils/: __init__.py  icon.py  misc.py  sass.py  version.py
ignis/widgets/: __init__.py  button.py  check_button.py  circular_progress.py  corner.py  entry.py  eventbox.py  fixed.py  regular_window.py  scale.py  window.py
nix/: default.nix  devshell.nix  hm-module-doc.md  hm-module.nix  version.nix
