option(
    'dependency_check',
    type: 'boolean',
    value: true,
    description: 'Check required dependencies.',
)

option(
    'COMMITHASH',
    type: 'string',
    value: '',
    description: 'NOT PUBLIC OPTION: custom commit hash to configure ignis/__commit__.py.in'
)

option(
    'wheel',
    type: 'boolean',
    value: false,
    description: 'Build for a Python wheel'
)
